--- a/pipedreams-backend/package.json
+++ b/pipedreams-backend/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "fastify": "^4.22.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
