--- a/pipedreams-backend/package.json
+++ b/pipedreams-backend/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
-    "fastify": "^4.22.0"
+    "fastify": "^4.22.0",
+    "mongo": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
