--- a/pipedreams-backend/package.json
+++ b/pipedreams-backend/package.json
@@ -2,9 +2,11 @@
   "name": "pipedreams-backend",
   "version": "0.1.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
@@ -12,6 +14,9 @@
     "mongo": "^0.1.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.14",
+    "@types/jest": "^29.5.4",
+    "jest": "^29.6.4",
     "nodemon": "^2.0.22"
   }
 }
