--- a/pipedreams-backend/package.json
+++ b/pipedreams-backend/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.22.14",
     "@types/jest": "^29.5.4",
     "jest": "^29.6.4",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
