--- a/pipedreams-react/package.json
+++ b/pipedreams-react/package.json
@@ -6,16 +6,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "jest": "jest"
+    "build:prod": "react-scripts build prod",
+    "test": "jest",
+    "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -44,7 +44,8 @@
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "jest-fetch-mock": "^3.0.3",
-    "jsdom": "^22.1.0"
+    "jsdom": "^22.1.0",
+    "react-scripts": "5.0.1"
   },
   "jest": {
     "moduleNameMapper": {
